delete bdd things

--- a/data/test.properties
+++ b/data/test.properties
@@ -1,9 +1,5 @@
 #HSQL Database Engine 2.3.4
-<<<<<<< Updated upstream
-#Fri Sep 14 09:11:11 CEST 2018
-=======
-#Fri Sep 14 09:11:09 CEST 2018
->>>>>>> Stashed changes
+#Fri Sep 14 13:59:28 CEST 2018
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
