--- a/data/test.properties
+++ b/data/test.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Fri Sep 14 13:59:28 CEST 2018
+#Fri Sep 14 14:59:36 CEST 2018
 version=2.3.4
-modified=no
+modified=yes
 tx_timestamp=0
